[gd_scene load_steps=6 format=2]

[ext_resource path="res://Base.gd" type="Script" id=1]
[ext_resource path="res://Gun.tscn" type="PackedScene" id=2]
[ext_resource path="res://Launchpad.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 180.0

[sub_resource type="CircleShape2D" id=2]
radius = 180.0

[node name="Base" type="Area2D"]
collision_mask = 38
script = ExtResource( 1 )

[node name="Gun" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, -164 )

[node name="GunLevel" type="Label" parent="Gun"]
margin_left = -10.0
margin_top = 11.0
margin_right = 1.0
margin_bottom = 25.0
grow_horizontal = 0
rect_scale = Vector2( 2, 2 )
text = "123"
align = 1
valign = 1

[node name="Launchpad" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( 0, -164 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ChangeWeapon" type="TouchScreenButton" parent="."]
shape = SubResource( 2 )
passby_press = true

[connection signal="area_entered" from="." to="." method="_on_Base_area_entered"]
[connection signal="pressed" from="ChangeWeapon" to="." method="_on_ChangeWeapon_pressed"]
